* Better error handling (no results is not an error) * Do not reset the available variables before using them.

BUG: 240210

svn path=/trunk/KDE/kdelibs/; revision=1132781